Działa :) jeszcze update i delete